Leaderboard styled with variable contrast color fix

--- a/client/src/components/styles/Modal.scss
+++ b/client/src/components/styles/Modal.scss
@@ -8,6 +8,10 @@ div.modal-content {
     border-color: inherit;
   }
 
+  div.modal-footer {
+    border-color: inherit;
+  }
+
   div > input {
     @include modalColorTheme($modal-color-theme, $modal-bg-color-theme);
   }
@@ -46,16 +50,15 @@ div.modal-content {
   color: $danger-alert;
   border-color: $danger-alert;
 }
+.table {
+  color: inherit;
+}
 
-tr {
-  .table-striped tbody tr:nth-of-type(1n) {
-    @include colorTheme($modal-alt-color-theme, $modal-bg-color-theme);
+.table-striped tbody {
+  tr:nth-of-type(even) {
+    @include colorTheme($modal-color-theme, $modal-bg-color-theme);
   }
-}
-.table-striped tbody tr:nth-of-type(2n) {
-  @include colorTheme($modal-alt-color-theme-2, $modal-bg-color-theme);
-}
-
-.table-striped tbody tr:nth-of-type(3n) {
-  @include colorTheme($modal-color-theme, $modal-bg-color-theme);
+  tr:nth-of-type(odd) {
+    @include colorTheme($modal-alt-color-theme-2, $modal-bg-color-theme);
+  }
 }
